# SecondBrainR

./: .gitignore  CLAUDE.md  LICENSE  README.md
_code/: .env.example  .gitignore  README.md  pyproject.toml
_code/.claude/: settings.local.json
_code/R/: DESCRIPTION  export_predictions.R  palettes.R  plot_builders.R  plot_helpers.R  stats_helpers.R  theme_research.R
_code/dashboard/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
_code/profiles/: README.md
_code/scripts/: backfill_provenance.py  fix_broken_links.py  init_vault.py  populate_stubs.py  rename_literature.py  repair_queue_targets.py  verify_claim.py
_code/styles/: PLOT_DESIGN.md  STYLE_GUIDE.md  palettes.yaml
_code/templates/: claim-note.md  compute-reference.md  cycle-summary.md  data-inventory.md  eda-report.md  experiment-results-readme.md  experiment.md  goals.md  hypothesis.md  institution.md  lab.md  literature.md  meta-review.md  project.md  reminders.md  research-goal.md  topic-map.md  tournament-match.md
_code/tests/: test_arxiv.py  test_audit.py  test_auto_commit.py  test_backfill_provenance.py  test_claim_exchange.py  test_crossref.py  test_daemon_config.py  test_daemon_scheduler.py  test_decision_engine.py  test_domain_profile.py  test_eda.py  test_elo.py  test_experiment_resolver.py  test_federation_config.py  test_fix_claim_structure.py  test_hook_utils.py  test_hypothesis_exchange.py  test_hypothesis_parser.py  test_hypothesis_similarity.py  test_init_vault.py  test_integrity.py  test_literature_types.py  test_metabolic_history.py  (+34 more)
(+346 files in other folders)
